--- a/build.gradle
+++ b/build.gradle
@@ -27,3 +27,11 @@ compileJava.options.encoding = 'UTF-8'
 
 task stage(dependsOn: ['build', 'clean'])
 build.mustRunAfter clean
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'me.alexutzzu.woobot.main.Main'
+        )
+    }
+}
