--- a/build.gradle
+++ b/build.gradle
@@ -35,3 +35,9 @@ jar {
         )
     }
 }
+task copyToLib(type: Copy) {
+    into "$buildDir/libs"
+    from(configurations.compile)
+}
+
+stage.dependsOn(copyToLib)
